# Backend

./: .gitignore  .gitmodules  CMakeLists.txt
.claude/commands/har/: apply.md  archive.md  explore.md  plan.md  update.md
.claude/har/changes/archive/2026-07-19-add-volk/: design.md  proposal.md  tasks.md
.claude/har/specs/volk-integration/: spec.md
.claude/rules/: code-style.md  git.md
.claude/skills/har-apply/: SKILL.md
.claude/skills/har-archive/: SKILL.md
.claude/skills/har-explore/: SKILL.md
.claude/skills/har-plan/: SKILL.md
.claude/skills/har-update/: SKILL.md
3rd/: CMakeLists.txt
openspec/: config.yaml
openspec/changes/add-pimpl-helper/: tasks.md
openspec/changes/archive/2026-07-12-add-pimpl-helper/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-add-pimpl-helper/specs/pimpl-helper/: spec.md
openspec/changes/archive/2026-07-12-add-ref-sharedptr/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-add-ref-sharedptr/specs/ref-counted-base/: spec.md
openspec/changes/archive/2026-07-12-add-ref-sharedptr/specs/shared-ptr/: spec.md
openspec/changes/archive/2026-07-12-setup-cmake-project/: tasks.md
openspec/changes/archive/2026-07-12-setup-cmake-project/specs/third-party-dependency-management/: spec.md
openspec/changes/setup-cmake-project/: design.md  proposal.md  tasks.md
openspec/specs/pimpl-helper/: spec.md
openspec/specs/ref-counted-base/: spec.md
openspec/specs/shared-ptr/: spec.md
openspec/specs/third-party-dependency-management/: spec.md
src/: Backend.cpp
(+1 files in other folders)
